[tool.poetry]
name = "bmc-launcher"
version = "0.1.0"
description = ""
authors = ["Pritpal Sabharwal <pritpal@theopsguy.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^11.1.0"
ansible-core = "^2.18.1"
webdriver-manager = "^4.0.2"
selenium = "^4.27.1"
ruamel-yaml = "^0.18.6"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.4.1"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["bmc_launcher"]
skip_gitignore = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", "build", "dist"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
