[tool.poetry]
name = "bmc-launcher"
version = "0.0.0"
description = "A utility for launching BMC interfaces"
authors = ["Pritpal Sabharwal <pritpal@theopsguy.co.uk>"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/theopsguy/bmc-launcher"
repository = "https://github.com/theopsguy/bmc-launcher"
keywords = ["bmc", "idrac", "ilo", "ipmi", "supermicro", "selenium"]
packages = [{include = "bmc_launcher"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
bmc-launcher = "bmc_launcher.main:main"

[tool.poetry.dependencies]
python = "^3.12"
webdriver-manager = "^4.0.2"
selenium = "^4.27.1"
ruamel-yaml = "^0.18.6"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.4.1"
flake8-pyproject = "^1.2.3"
pytest-cov = "^6.2.1"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["bmc_launcher"]
skip_gitignore = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
